ft:added navbar section for users

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,34 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-fixed-top navbar-dark">
     <a class="navbar-brand" href="/"><span class="home">Pitches</span></a>
-    <button class="navbar-toggle" data-toggle="collapse" data-target="#" aria-expanded="false" aria-controls="">
+    <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-support" aria-expanded="false" aria-controls="navbar-support">
         <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse id=navbar-support ">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item dropdown">
+                <a href="#" class="dropdown-toggle" id="dropdownnav" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="category">Categories</span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownnav">
+                    <a class="dropdown-item" href="#">Technology</a>
+                    <a class="dropdown-item" href="#">Development</a>
+                    <a class="dropdown-item" href="#">Education</a>
+                    <a class="dropdown-item" href="#">Entertainment</a>
+                    <a class="dropdown-item" href="#">Business</a>
+                    <a class="dropdown-item" href="#">Politics</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href=""></a>
+                </div>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+
+
+
+        </ul>
+
+    </div>
 </nav>
