--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,10 +10,10 @@
                     <span class="category">Categories</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownnav">
-                    <a class="dropdown-item" href="#">Technology</a>
-                    <a class="dropdown-item" href="#">Development</a>
-                    <a class="dropdown-item" href="#">Education</a>
-                    <a class="dropdown-item" href="#">Entertainment</a>
+                    <li><a class="dropdown-item" href="#">Technology</a></li>
+                    <li><a class="dropdown-item" href="#">Development</a></li>
+                    <li><a class="dropdown-item" href="#">Education</a></li>
+                    <li><a class="dropdown-item" href="#">Entertainment</a><li>
                     <a class="dropdown-item" href="#">Business</a>
                     <a class="dropdown-item" href="#">Politics</a>
                     <div class="dropdown-divider"></div>
