--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -14,8 +14,8 @@
                     <li><a class="dropdown-item" href="#">Development</a></li>
                     <li><a class="dropdown-item" href="#">Education</a></li>
                     <li><a class="dropdown-item" href="#">Entertainment</a><li>
-                    <a class="dropdown-item" href="#">Business</a>
-                    <a class="dropdown-item" href="#">Politics</a>
+                    <li><a class="dropdown-item" href="#">Business</a></li>
+                    <li><a class="dropdown-item" href="#">Politics</a></li>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href=""></a>
                 </div>
