--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,2 +1,21 @@
-{%extends 'base.html'%}
-<h3>We are happy to have you on board.</h3>
+{%extends 'base.html'%} {%block content%}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="verse">
+                <h1>Welcome to Pitches Site! Feel freee</h1>
+                {% if current_user.is_authenticated%}
+                <a id="start" href = "{{url_for('main.home')}}" class="btn btn-danger"><span class="">View  Pitch</span></a>
+                {%else%}
+                <a id="start" href = "{{url_for('auth.login')}}" class="btn btn-danger"><span class="">Sign in</span></a>
+                {%endif%}
+
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
+
+{%endblock%}
