ft:structurized the pitches page

--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -1,1 +1,15 @@
+{%extends 'base.html'%} {%import 'macros.html' as macro%}
+{%block content%}
+<div class="container">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <div class="row sec">
+                {{macro.displayCategory(category)}}
+            </div>
+        </div>
+        <div class="col-md-2"></div>
 
+    </div>
+</div>
+{%endblock%}
