fixed bugs in the database

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <h2>Sign Up</h2>
                     <h4>Fill out the form to sign up</h4>
-                    {{wtf.quick_form(LoginForm)}}
+                    {{wtf.quick_form(form)}}
                 </div>
 
 
