ft:added routing for the home page

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-fixed-top navbar-dark">
-    <a class="navbar-brand" href="/"><span class="home">Pitches</span></a>
+    <a class="navbar-brand" href="/"><span class="home"><h1>Pitches</h1></span></a>
     <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-support" aria-expanded="false" aria-controls="navbar-support">
         <span class="navbar-toggler-icon"></span>
     </button>
