--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,16 +1,24 @@
-{%extends 'base.html'%} {%import 'bootstrap/wtf.html' as wtf%} {%block content%}
-<div class="container">
+{% extends 'base.html'%}
+{% import 'bootstrap/wtf.html' as wtf%}
+
+{% block content %}
+<div class="container"> 
     <div class="row">
-        <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
-                <div class="row">
-                    <h2>Sign Up</h2>
-                    <h4>Fill out the form to sign up</h4>
-                    {{wtf.quick_form(form)}}
-                </div>
-
-
-                
+      <div class= "col-md-2"> </div>
+      <div class="col-md-8">
+      <!--Flash message -->
+      {% for message in get_flashed_messages() %}
+        <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+        </div>
+      {% endfor %}
+      <!-- Login form -->
+      {{wtf.quick_form(login_form)}}
+      <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
+     </div>
+     <div clas="col-md-2"> </div>
     </div>
 </div>
-{%endblock%}
+
+{% endblock%}
