--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <h2>Sign Up</h2>
                     <h4>Fill out the form to sign up</h4>
-                    {{wtf.quick_form(registration_form)}}
+                    {{wtf.quick_form(form)}}
                 </div>
         
     </div>
