--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="verse">
-                <h1>Welcome to Pitches Site! Feel freee</h1>
+                <h1 class="size text-center">Welcome to Pitches Site! Feel freee</h1>
                 {% if current_user.is_authenticated%}
-                <a id="start" href = "{{url_for('main.home')}}" class="btn btn-danger"><span class="">View  Pitch</span></a>
+                <a id="start" href = "{{url_for('main.home')}}" class="btn btn-danger"><span class="">View  Pitches</span></a>
                 {%else%}
-                <a id="start" href = "{{url_for('auth.login')}}" class="btn btn-danger"><span class="">Sign in</span></a>
+                <a id="start" href = "{{url_for('auth.login')}}" class="btn btn-danger mr-auto"><span class="">Sign in</span></a>
                 {%endif%}
 
             </div>
