--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,34 +1,50 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-fixed-top navbar-dark">
-    <a class="navbar-brand" href="/"><span class="home"><h1>Pitches</h1></span></a>
-    <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-support" aria-expanded="false" aria-controls="navbar-support">
+<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+    {% if current_user.is_authenticated%}
+    <a class="navbar-brand " href="/"><span class="home">Pitch</span></a> {% else %}
+    <a class="navbar-brand" href="/"><span class="home">Pitch</span></a> {% endif %}
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse collapse id=navbar-support ">
-        <ul class="nav navbar-nav navbar-right">
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a href="#" class="dropdown-toggle" id="dropdownnav" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    <span class="category">Categories</span>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="cat">Categories</span>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownnav">
-                    <li><a class="dropdown-item" href="#">Technology</a></li>
-                    <li><a class="dropdown-item" href="#">Development</a></li>
-                    <li><a class="dropdown-item" href="#">Education</a></li>
-                    <li><a class="dropdown-item" href="#">Entertainment</a><li>
-                    <li><a class="dropdown-item" href="#">Business</a></li>
-                    <li><a class="dropdown-item" href="#">Politics</a></li>
+                <div class="dropdown-menu category" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/category/Interview-Pitch">Interview Pitch</a>
+                    <a class="dropdown-item" href="/category/Product-Pitch">Product Pitch</a>
+                    <a class="dropdown-item" href="/category/Promotion-Pitch">Promotion Pitch</a>
+                    <a class="dropdown-item" href="/category/Business">Business</a>
+                    <a class="dropdown-item" href="/category/Academic">Academic</a>
+                    <a class="dropdown-item" href="/category/Political">Political</a>
+                    <a class="dropdown-item" href="/category/Technology">Technology</a>
+                    <a class="dropdown-item" href="/category/Health">Health</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href=""></a>
+                    <a class="dropdown-item" href="{{url_for('main.profile', uname = current_user.username, id_user = current_user.id)}}">{{current_user.username|capitalize}}</a>
                 </div>
+            </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item"></li>
-            <li class="nav-item"></li>
-            <li class="nav-item"></li>
-            <li class="nav-item"></li>
-
-
-
+        <ul class="navbar-nav navbar-right">
+            {% if current_user.is_authenticated%}
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('main.profile', uname = current_user.username, id_user = current_user.id)}}">{{current_user.username|capitalize}}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.logout')}}">
+                    <i class="fa fa-sign-out"></i><span class="log">Sign out</span> </a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.login')}}">
+                    <i class="fa fa-sign-in"></i> <span class="log">Sign in</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('auth.login')}}">
+                    <i class="fa fa-user-plus"></i> <span class="log">Sign Up</span></a>
+            </li>
+            {% endif %}
         </ul>
-
     </div>
 </nav>
