--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -8,7 +8,7 @@
             <img src="{{url_for('static',filename = 'photos/avatar2.png')}}" alt="" class=""> {% endif %}
             <p class="user-tag"> {{user.username|capitalize}} </p>
             {% if user == current_user %}
-            <form action="{{url_for('main.update_pic',uname=user.username)}}" method="post" enctype="multipart/form-data">
+            <form  method="post" enctype="multipart/form-data">
                 <input type="file" name="photo" class="form-control" required>
                 <input type="submit">
             </form>
